--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="skill">
                     <div class="img-holder">
                         <div class="img c">
-                            <img src="/Images/C_Logo.svg">
+                            <img src="/Images/Logo_C_sharp.svg">
                         </div>
                     </div>
                     <p>C</p>
